[package]
name = "bench-demo"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
codspeed-criterion-compat = "2"
oxc_allocator = "0.102.0"
oxc_parser = "0.102.0"
oxc_span = "0.102.0"
rayon = "1.11"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"

[[bench]]
name = "benchmarks"
harness = false
